--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -38,7 +38,7 @@
 	          <img src="http://i.pravatar.cc/150?u=fake@pravatar.com" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
-	          			<p><b>Lovin' my time at this event</b></p>
+	          			<p><b>Best event ever, look at my picture!</b></p>
 	          			<p>#havingfun #giggshour #hellomum</p>
 	          		</div>
 	          	</div>
@@ -57,7 +57,7 @@
 	          <img src="http://i.pravatar.cc/150?img=3" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
-	          			<p><b>Lovin' my time at this event</b></p>
+	          			<p><b>I'm going to write a long description so that people know exactly what I'm up to</b></p>
 	          			<p>#havingfun #giggshour #hellomum</p>
 	          		</div>
 	          	</div>
@@ -76,7 +76,7 @@
 	          <img src="http://i.pravatar.cc/150?img=4" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
-	          			<p><b>Lovin' my time at this event</b></p>
+	          			<p><b>BBOM!</b></p>
 	          			<p>#havingfun #giggshour #hellomum</p>
 	          		</div>
 	          	</div>
