--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -60,6 +60,21 @@
 
    <div id="portfolio" class="section gray fullpage">
       <div class="container">
+      <br>
+
+        <div class="row">
+          <div class="col s12 m12 l12">
+            <div class="center-align">
+
+            <a class="btn-floating btn-large waves-effect waves-light tooltipped green" data-position="down" data-delay="50" data-tooltip="Approve All Posts"><i class="material-icons">done</i></a>
+            <a class="btn-floating btn-large waves-effect waves-light tooltipped red" data-position="down" data-delay="50" data-tooltip="Hide All Posts"><i class="material-icons">visibility_off</i></a>
+            <a class="btn-floating btn-large waves-effect waves-light tooltipped orange" data-position="down" data-delay="50" data-tooltip="Download All Posts"><i class="material-icons">file_download</i></a>
+            <a class="btn-floating btn-large waves-effect waves-light tooltipped grey darken-2" data-position="down" data-delay="50" data-tooltip="Launch Slideshow"><i class="material-icons">launch</i></a>
+
+            </div>
+
+          </div>
+        </div>
 
         <div id="test1" class="col s12"><!-- Start Moderation tab -->
           <br>
@@ -378,20 +393,7 @@
           
       
 
-      </div>
-
-      <div class="fixed-action-btn click-to-toggle">
-            <a class="btn-floating btn-large blue">
-              <i class="large material-icons">menu</i>
-            </a>
-            <ul>
-              <li><a class="btn-floating tooltipped green" data-position="left" data-delay="50" data-tooltip="Approve All Posts"><i class="material-icons">done</i></a></li>
-              <li><a class="btn-floating tooltipped red" data-position="left" data-delay="50" data-tooltip="Hide All Posts"><i class="material-icons">visibility_off</i></a></li>
-              <li><a class="btn-floating tooltipped orange" data-position="left" data-delay="50" data-tooltip="Download All Posts"><i class="material-icons""><i class="material-icons">file_download</i></a></li>
-              <li><a class="btn-floating tooltipped grey darken-2" data-position="left" data-delay="50" data-tooltip="Launch Slideshow"><i class="material-icons""><i class="material-icons">launch</i></a></li>
-            </ul>
-          </div>
-    </div>
+      
 
 
 
