--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -358,15 +358,33 @@
             <div class="collapsible-body"><span>Stop all incoming posts (photos and videos) from automatically appearing on the slideshow. By selecting 'Yes', you will need to manually approve all new posts before they are visible on the slideshow.<br></span>
 
               <!-- Switch -->
-  <div class="switch">
-  <br>
-    <label>
-      No
-      <input type="checkbox">
-      <span class="lever active"></span>
-      Yes
-    </label>
-  </div>
+              <div class="switch">
+              <br>
+                <label>
+                  No
+                  <input type="checkbox">
+                  <span class="lever active"></span>
+                  Yes
+                </label>
+              </div>
+
+
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header"><i class="material-icons">delete</i>Delete Slideshow</div>
+            <div class="collapsible-body"><span>Stop all incoming posts (photos and videos) from automatically appearing on the slideshow. By selecting 'Yes', you will need to manually approve all new posts before they are visible on the slideshow.<br></span>
+
+              <!-- Switch -->
+              <div class="switch">
+              <br>
+                <label>
+                  No
+                  <input type="checkbox">
+                  <span class="lever active"></span>
+                  Yes
+                </label>
+              </div>
 
 
             </div>
