--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -74,8 +74,8 @@
                     <div class="card">
                       <div class="card-image">
                       <%= link_to pages_edit_path do %>
-        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
-      <% end %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                         
                         <a class="btn-floating btn-large btn tooltipped halfway-fab waves-effect waves-light grey darken-2" data-position="top" data-delay="50" data-tooltip="Launch Slideshow"><i class="material-icons">launch</i></a>
 
@@ -91,8 +91,12 @@
                   <div class="col s12 m6 l4">
                     <div class="card">
                       <div class="card-image">
-                        <img class="responsive-img activator" src="http://placehold.it/400x300" alt="placeholder">
+                      <%= link_to pages_edit_path do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
+                        
                         <a class="btn-floating btn-large btn tooltipped halfway-fab waves-effect waves-light grey darken-2" data-position="top" data-delay="50" data-tooltip="Launch Slideshow"><i class="material-icons">launch</i></a>
+
                       </div>
                       <div class="card-content">
                         <%= link_to "#UELMEMORIES", pages_edit_path, class: "card-title" %>
