--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -312,12 +312,12 @@
             </div>
           </li>
           <li>
-            <div class="collapsible-header"><i class="material-icons tooltipped data-position="bottom" data-delay="50" data-tooltip="This information message will appear on the final slideshow at regular intervals, so people at the event know how to contribute their posts to the slideshow."">info_outline</i>Slideshow Information Message</div>
+            <div class="collapsible-header"><i class="material-icons tooltipped data-position="bottom" data-delay="50" data-tooltip="This information message will appear on the final slideshow at regular intervals, so people at the event know how to contribute their posts to the slideshow."">info_outline</i>Configure Popup Information Message</div>
             <div class="collapsible-body">
 
             <div class="row">
               <div clas="col l6 m6 s12">
-              <p class="mute">Display information message?</p>
+              <p class="mute">Configure Popup information message?</p>
               <div class="switch">
                 <label>
                   No
@@ -373,17 +373,12 @@
           </li>
           <li>
             <div class="collapsible-header"><i class="material-icons">delete</i>Delete Slideshow</div>
-            <div class="collapsible-body"><span>Stop all incoming posts (photos and videos) from automatically appearing on the slideshow. By selecting 'Yes', you will need to manually approve all new posts before they are visible on the slideshow.<br></span>
+            <div class="collapsible-body"><span>Are you sure you want to delete this slideshow?<br></span>
 
               <!-- Switch -->
               <div class="switch">
               <br>
-                <label>
-                  No
-                  <input type="checkbox">
-                  <span class="lever active"></span>
-                  Yes
-                </label>
+                <a class="waves-effect waves-light btn red">Delete Slideshow</a>
               </div>
 
 
