--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -19,8 +19,8 @@
 	          <img src="http://i.pravatar.cc/300" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
-	          			<p><b>Lovin' my time at this event</b></p>
-	          			<p>#havingfun #giggshour #hellomum</p>
+	          			<p><b class="truncate">Lovin' my time at this event</b></p>
+	          			<p class="truncate">#havingfun #giggshour #hellomum</p>
 	          		</div>
 	          	</div>
 	        </div>
@@ -38,8 +38,8 @@
 	          <img src="http://i.pravatar.cc/150?u=fake@pravatar.com" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
-	          			<p><b>Best event ever, look at my picture!</b></p>
-	          			<p>#havingfun #giggshour #hellomum</p>
+	          			<p><b class="truncate">Best event ever, look at my picture!</b></p>
+	          			<p class="truncate">#havingfun #giggshour #hellomum</p>
 	          		</div>
 	          	</div>
 	        </div>
@@ -57,8 +57,8 @@
 	          <img src="http://i.pravatar.cc/150?img=3" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
-	          			<p><b>I'm going to write a long description so that people know exactly what I'm up to</b></p>
-	          			<p>#havingfun #giggshour #hellomum</p>
+	          			<p><b class="truncate">I'm going to write a long description so that people know exactly what I'm up to</b></p>
+	          			<p class="truncate">#havingfun #giggshour #hellomum</p>
 	          		</div>
 	          	</div>
 	        </div>
@@ -76,8 +76,8 @@
 	          <img src="http://i.pravatar.cc/150?img=4" alt="" class="circle responsive-img">
 	          		</div>
 	          		<div class="col l9">
-	          			<p><b>BBOM!</b></p>
-	          			<p>#havingfun #giggshour #hellomum</p>
+	          			<p><b class="truncate">BBOM!</b></p>
+	          			<p class="truncate">#havingfun #giggshour #hellomum</p>
 	          		</div>
 	          	</div>
 	        </div>
