--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -312,12 +312,12 @@
             </div>
           </li>
           <li>
-            <div class="collapsible-header"><i class="material-icons tooltipped data-position="bottom" data-delay="50" data-tooltip="This information message will appear on the final slideshow at regular intervals, so people at the event know how to contribute their posts to the slideshow."">info_outline</i>Configure Popup Information Message</div>
+            <div class="collapsible-header"><i class="material-icons tooltipped data-position="bottom" data-delay="50" data-tooltip="This information message will appear on the final slideshow at regular intervals, so people at the event know how to contribute their posts to the slideshow."">info_outline</i>Configure Popup Message</div>
             <div class="collapsible-body">
 
             <div class="row">
               <div clas="col l6 m6 s12">
-              <p class="mute">Configure Popup information message?</p>
+              <p class="mute">Display popup message?</p>
               <div class="switch">
                 <label>
                   No
@@ -334,7 +334,7 @@
               <div clas="col l6 m6 s12">
                 <div class="input-field col s12">
                   <textarea id="textarea1" class="materialize-textarea" data-length="50"></textarea>
-                  <label for="textarea1">Choose your information message</label>
+                  <label for="textarea1">Choose your popup message</label>
                 </div>
               </div>
             </div>
