--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -82,7 +82,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
@@ -94,7 +96,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
@@ -106,7 +110,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
@@ -118,7 +124,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
                   <div class="card-content">
@@ -130,7 +138,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
@@ -142,7 +152,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
                   <div class="card-content">
@@ -154,7 +166,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
                   <div class="card-content">
@@ -166,7 +180,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
                   <div class="card-content">
@@ -178,7 +194,9 @@
               <div class="col s12 m6 l4">
                 <div class="card">
                   <div class="card-image">
-                    <img src="http://placehold.it/400x300">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
                   <div class="card-content">
@@ -312,7 +330,7 @@
             </div>
           </li>
           <li>
-            <div class="collapsible-header"><i class="material-icons tooltipped data-position="bottom" data-delay="50" data-tooltip="This information message will appear on the final slideshow at regular intervals, so people at the event know how to contribute their posts to the slideshow."">info_outline</i>Configure Popup Message</div>
+            <div class="collapsible-header"><i class="material-icons tooltipped data-position="bottom" data-delay="50" data-tooltip="This popup message will appear on the final slideshow at regular intervals, so people at the event know how to contribute their posts to the slideshow."">info_outline</i>Configure Popup Message</div>
             <div class="collapsible-body">
 
             <div class="row">
