--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -65,15 +65,20 @@
           <br>
           <div class="row">
           <div class="col s12 m12 l12">
-            <div class="center-align">
 
-            <a class="btn-floating btn-large waves-effect waves-light tooltipped green" data-position="down" data-delay="50" data-tooltip="Approve All Posts"><i class="material-icons">done</i></a>
-            <a class="btn-floating btn-large waves-effect waves-light tooltipped red" data-position="down" data-delay="50" data-tooltip="Hide All Posts"><i class="material-icons">visibility_off</i></a>
-            <a class="btn-floating btn-large waves-effect waves-light tooltipped orange" data-position="down" data-delay="50" data-tooltip="Download All Posts"><i class="material-icons">file_download</i></a>
-            <a class="btn-floating btn-large waves-effect waves-light tooltipped grey darken-2" data-position="down" data-delay="50" data-tooltip="Launch Slideshow"><i class="material-icons">launch</i></a>
-
-            </div>
-            <br>
+          <div style="position: relative; height: 70px;">
+          <div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 0px;">
+            <a class="btn-floating btn-large blue">
+              <i class="large material-icons">menu</i>
+            </a>
+            <ul>
+              <li><a class="btn-floating tooltipped green" data-position="bottom" data-delay="50" data-tooltip="Approve All Posts" style="transform: scaleY(0.4) scaleX(0.4) translateY(0px) translateX(40px); opacity: 0; "><i class="material-icons">done</i></a></li>
+              <li><a class="btn-floating tooltipped red" data-position="bottom" data-delay="50" data-tooltip="Hide All Posts" style="transform: scaleY(0.4) scaleX(0.4) translateY(0px) translateX(40px); opacity: 0; "><i class="material-icons">visibility_off</i></a></li>
+              <li><a class="btn-floating tooltipped orange" data-position="bottom" data-delay="50" data-tooltip="Download All Posts" style="transform: scaleY(0.4) scaleX(0.4) translateY(0px) translateX(40px); opacity: 0; "><i class="material-icons">file_download</i></a></li>
+              <li><a class="btn-floating tooltipped grey darken-2" data-position="bottom" data-delay="50" data-tooltip="Launch Slideshow" style="transform: scaleY(0.4) scaleX(0.4) translateY(0px) translateX(40px); opacity: 0; "><i class="material-icons">launch</i></a></li>
+            </ul>
+          </div>
+        </div>
 
           </div>
         </div>
