--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -72,8 +72,6 @@
               <i class="large material-icons">menu</i>
             </a>
             <ul>
-              <li><a class="btn-floating tooltipped green" data-position="bottom" data-delay="50" data-tooltip="Approve All Posts" style="transform: scaleY(0.4) scaleX(0.4) translateY(0px) translateX(40px); opacity: 0; "><i class="material-icons">done</i></a></li>
-              <li><a class="btn-floating tooltipped red" data-position="bottom" data-delay="50" data-tooltip="Hide All Posts" style="transform: scaleY(0.4) scaleX(0.4) translateY(0px) translateX(40px); opacity: 0; "><i class="material-icons">visibility_off</i></a></li>
               <li><a class="btn-floating tooltipped orange" data-position="bottom" data-delay="50" data-tooltip="Download All Posts" style="transform: scaleY(0.4) scaleX(0.4) translateY(0px) translateX(40px); opacity: 0; "><i class="material-icons">file_download</i></a></li>
               <li><a class="btn-floating tooltipped grey darken-2" data-position="bottom" data-delay="50" data-tooltip="Launch Slideshow" style="transform: scaleY(0.4) scaleX(0.4) translateY(0px) translateX(40px); opacity: 0; "><i class="material-icons">launch</i></a></li>
             </ul>
@@ -94,6 +92,23 @@
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
+                    <p class="subtext grey-text text-lighten-1">Approved by Bill just now</p>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title">Visible On Slideshow</span>
+                     <p class="subtext grey-text text-lighten-1">Approved 1 minute ago by Bill</p>
                   </div>
                 </div>
               </div>
@@ -108,6 +123,67 @@
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
+                     <p class="subtext grey-text text-lighten-1">Approved 2 minutes ago by Bill</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title">Hidden From Slideshow</span>
+                     <p class="subtext grey-text text-lighten-1">Rejected by Bill 2 minutes ago</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
+                  </div>
+                  <div class="card-content">
+                  <span class="card-title">Visible On Slideshow</span>
+                    <p class="subtext grey-text text-lighten-1">Approved 5 minutes ago by Bill</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
+                  </div>
+                  <div class="card-content">
+                  <span class="card-title">Hidden From Slideshow</span>
+                    <p class="subtext grey-text text-lighten-1">Rejected by Bill 5 minutes ago</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <%= link_to "" do %>
+                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                      <% end %>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title">Hidden From Slideshow</span>
+                     <p class="subtext grey-text text-lighten-1">Rejected by Bill 7 minutes ago</p>
                   </div>
                 </div>
               </div>
@@ -122,6 +198,7 @@
                   </div>
                   <div class="card-content">
                     <span class="card-title">Visible On Slideshow</span>
+                    <p class="subtext grey-text text-lighten-1">Approved by Bill 8 minutes ago</p>
                   </div>
                 </div>
               </div>
@@ -136,76 +213,7 @@
                   </div>
                   <div class="card-content">
                     <span class="card-title">Hidden From Slideshow</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col s12 m6 l4">
-                <div class="card">
-                  <div class="card-image">
-                    <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
-                      <% end %>
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Visible On Slideshow</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col s12 m6 l4">
-                <div class="card">
-                  <div class="card-image">
-                    <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
-                      <% end %>
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Hidden From Slideshow</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col s12 m6 l4">
-                <div class="card">
-                  <div class="card-image">
-                    <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
-                      <% end %>
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Hidden From Slideshow</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col s12 m6 l4">
-                <div class="card">
-                  <div class="card-image">
-                    <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
-                      <% end %>
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Visible On Slideshow</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col s12 m6 l4">
-                <div class="card">
-                  <div class="card-image">
-                    <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
-                      <% end %>
-                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">Hidden From Slideshow</span>
+                    <p class="subtext grey-text text-lighten-1">Rejected by Bill 9 minutes ago</p>
                   </div>
                 </div>
               </div>
