--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -67,7 +67,7 @@
           <div class="col s12 m12 l12">
 
           <div style="position: relative; height: 70px;">
-          <div class="fixed-action-btn horizontal click-to-toggle" style="position: absolute; display: inline-block; right: 0px;">
+          <div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 0px;">
             <a class="btn-floating btn-large blue">
               <i class="large material-icons">menu</i>
             </a>
