--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,8 @@ img.brand-logo {
   padding-top: 20px;
 }
 
+img.responsive-img.activator {}
+
 
 
 .dropdown-content li > a, .dropdown-content li > span {
