--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -86,7 +86,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=0", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -102,7 +102,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=1", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -117,7 +117,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=2", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -132,7 +132,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=3", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
@@ -147,7 +147,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=4", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -162,7 +162,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=5", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
@@ -177,7 +177,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=6", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
@@ -192,7 +192,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=7", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -207,7 +207,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "http://placehold.it/400x300", class: "responsive-img activator" %>
+                        <%= image_tag "https://unsplash.it/400/?image=8", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
@@ -343,12 +343,12 @@
             </div>
           </li>
           <li>
-            <div class="collapsible-header"><i class="material-icons tooltipped data-position="bottom" data-delay="50" data-tooltip="This popup message will appear on the final slideshow at regular intervals, so people at the event know how to contribute their posts to the slideshow."">info_outline</i>Configure Popup Message</div>
+            <div class="collapsible-header"><i class="material-icons tooltipped data-position="bottom" data-delay="50" data-tooltip="This popup message will appear on the final slideshow at regular intervals, so people at the event know how to contribute their posts to the slideshow."">info_outline</i>Configure Information Message</div>
             <div class="collapsible-body">
 
             <div class="row">
               <div clas="col l6 m6 s12">
-              <p class="mute">Display popup message?</p>
+              <p class="mute">Display information message?</p>
               <div class="switch">
                 <label>
                   No
@@ -365,7 +365,7 @@
               <div clas="col l6 m6 s12">
                 <div class="input-field col s12">
                   <textarea id="textarea1" class="materialize-textarea" data-length="50"></textarea>
-                  <label for="textarea1">Choose your popup message</label>
+                  <label for="textarea1">Choose your information message</label>
                 </div>
               </div>
             </div>
