--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -218,6 +218,21 @@
                 </div>
               </div>
 
+              <div class="col s12 m6 l4">
+                <div class="card">
+                  <div class="card-image">
+                    <%= link_to "" do %>
+                        <%= image_tag "https://unsplash.it/400/?image=9", class: "responsive-img activator" %>
+                      <% end %>
+                    <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title">Hidden From Slideshow</span>
+                    <p class="subtext grey-text text-lighten-1">Rejected by Bill 9 minutes ago</p>
+                  </div>
+                </div>
+              </div>
+
 
 
             
