--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -86,7 +86,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=0", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -102,7 +102,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=1", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -117,7 +117,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=2", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -132,7 +132,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=3", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
@@ -147,7 +147,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=4", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -162,7 +162,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=5", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
@@ -177,7 +177,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=6", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
@@ -192,7 +192,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=7", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light green"><i class="material-icons">done</i></a>
                   </div>
@@ -207,7 +207,7 @@
                 <div class="card">
                   <div class="card-image">
                     <%= link_to "" do %>
-                        <%= image_tag "https://unsplash.it/400/?image=8", class: "responsive-img activator" %>
+                        <%= image_tag "http://placehold.it/400x400", class: "responsive-img activator" %>
                       <% end %>
                     <a class="btn-floating btn halfway-fab waves-effect waves-light red"><i class="material-icons">visibility_off</i></a>
                   </div>
